# pydeps-deta

./: .gitignore  .spaceignore  Discovery.md  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
pydeps/: __init__.py  __version__.py  models.py  remote.py  request.py
